# Copyright (C) 2025 Category Labs, Inc.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

cmake_minimum_required(VERSION 3.27)

cmake_policy(SET CMP0144 NEW) # find_package uses upper-case _ROOT variables

project(monad)

set(CATEGORY_MAIN_DIR ${PROJECT_SOURCE_DIR})

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 15)
    message(FATAL_ERROR "GCC version 15 or higher is required.")
  endif()
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19)
    message(FATAL_ERROR "Clang version 19 or higher is required.")
  endif()
endif()

if(BUILD_SHARED_LIBS)
  # BUILD_SHARED_LIBS=ON does not automatically set -fPIC, leading to
  # relocations being emitted in object files that can't be patched
  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(MONAD_COMPILER_COVERAGE "Build with coverage" OFF)
option(MONAD_COMPILER_TESTING "Build compiler tests" OFF)
option(MONAD_COMPILER_BENCHMARKS "Build compiler benchmarks" OFF)
option(MONAD_COMPILER_DUMP_ASM "Dump assembly files into build/asm" OFF)
option(MONAD_COMPILER_STATS "Print statistics about the compiler" OFF)
option(MONAD_COMPILER_HOT_PATH_STATS "Print statistics about the vm" OFF)

if(NOT DEFINED BUILD_SHARED_LIBS)
  # If this isn't defined, evmone has the audacity to define it itself (to ON)
  # whereas the ordinary default is for static libraries; if it's not specified,
  # we explicitly set it to OFF, agreeing with the expected default and
  # preventing evmone from doing something different
  option(BUILD_SHARED_LIBS "Build monad with shared libraries" OFF)
endif()

include(cmake/test.cmake)

# ##############################################################################
# deps
# ##############################################################################

set(THIRD_PARTY_DIR "${PROJECT_SOURCE_DIR}/third_party")

include(cmake/compile_options.cmake)

find_package(Boost REQUIRED COMPONENTS context filesystem json CONFIG)
find_package(PkgConfig REQUIRED)
pkg_check_modules(brotli REQUIRED IMPORTED_TARGET libbrotlienc libbrotlidec)
pkg_check_modules(crypto++ REQUIRED IMPORTED_TARGET libcrypto++)
pkg_check_modules(zstd REQUIRED IMPORTED_TARGET libzstd)

# ankerl
add_library(ankerl_hash INTERFACE)
target_include_directories(ankerl_hash INTERFACE "third_party/ankerl")

# asmjit
set(ASMJIT_STATIC ON)
add_subdirectory(third_party/asmjit)

# BLAKE3
add_subdirectory(third_party/BLAKE3/c)

# blst
set(DOWNLOAD_BLST OFF)
include(cmake/blst.cmake)

# c-kzg-4844
add_subdirectory("third_party/c-kzg-4844-builder")

# cli11
find_package(CLI11 REQUIRED)

# concurrentqueue
add_subdirectory("third_party/concurrentqueue")

# cthash
add_subdirectory("third_party/cthash")

# ethash
set(ETHASH_TESTING NO)
add_subdirectory("third_party/ethash")
# ethash carries clang::no_sanitize attributes that GCC ignores and warns about.
# Match the narrow, GNU-only form monad_compile_options() uses above.
target_compile_options(
  ethash PRIVATE $<$<CXX_COMPILER_ID:GNU>:-Wno-attributes=clang::no_sanitize>)

# fiber (boost)
# Boost.Fiber's CMakeLists.txt expects granular Boost targets from the
# superproject build. The system-installed Boost only provides Boost::headers
# for header-only libs. Create shim targets so fiber can link them.
foreach(_boost_hdr_lib assert config core intrusive predef smart_ptr algorithm format)
  if(NOT TARGET Boost::${_boost_hdr_lib})
    add_library(boost_${_boost_hdr_lib} INTERFACE)
    target_link_libraries(boost_${_boost_hdr_lib} INTERFACE Boost::headers)
    add_library(Boost::${_boost_hdr_lib} ALIAS boost_${_boost_hdr_lib})
  endif()
endforeach()
add_subdirectory("third_party/fiber" SYSTEM)
# Boost.Fiber triggers warnings under C++23 strict flags.
target_compile_options(boost_fiber PRIVATE -Wno-deprecated-declarations -Wno-conversion)

# immer
option(immer_BUILD_TESTS OFF)
option(immer_BUILD_EXAMPLES OFF)
option(immer_BUILD_EXTRAS OFF)
add_subdirectory("third_party/immer" SYSTEM)

# intx
add_subdirectory("third_party/intx")

# evmc
set(HUNTER_ENABLED OFF)
add_subdirectory("third_party/evmc")

# evmone
if (MONAD_COMPILER_TESTING OR MONAD_COMPILER_BENCHMARKS)
  include(cmake/evmone.cmake)
endif()

# komihash
add_library(komihash INTERFACE)
target_include_directories(komihash INTERFACE "third_party/komihash")

# magic_enum
add_subdirectory("third_party/magic_enum")

# nanobench
add_subdirectory("third_party/nanobench")

# nlohmann_json
add_subdirectory("third_party/nlohmann_json" SYSTEM)

# quill
add_subdirectory("third_party/quill")
# TODO
target_compile_options(
  quill
  PUBLIC
    $<$<AND:$<CXX_COMPILER_ID:GNU>,$<CONFIG:Release>>:-Wno-stringop-overflow>)
target_compile_options(
  quill PUBLIC $<$<CXX_COMPILER_ID:GNU>:-Wno-tautological-compare>)
# quill's own sources use the deprecated std::wstring_convert. PRIVATE so it
# does not disable warnings in our code that includes quill headers.
target_compile_options(quill PRIVATE -Wno-deprecated-declarations)

if (MINGW)
  # quill's own CMakeLists.txt unconditionally links ucrtbase PUBLIC on MinGW
  # (to get a strftime that formats time correctly). That makes every
  # consumer of quill a hybrid-CRT binary: our toolchain's default startup
  # and the <stdio.h> stdin/stdout/stderr macros resolve through msvcrt.dll,
  # while ucrtbase-resolved symbols use a different FILE structure layout.
  # Any FILE*-based stdio call (fprintf, fwrite, and quill's own
  # StreamHandler::write(), which fwrite()s log lines to stdout/stderr) can
  # then crash inside msvcrt's _lock_file under thread contention, because
  # msvcrt's tiny static _iob[] table doesn't recognize a ucrt FILE* and
  # indexes out of bounds. Strip the ucrtbase requirement so the whole
  # binary consistently uses msvcrt's CRT/stdio; we don't rely on
  # strftime's extra format specifiers.
  get_target_property(_quill_interface_link_libs quill
                       INTERFACE_LINK_LIBRARIES)
  if (_quill_interface_link_libs)
    list(REMOVE_ITEM _quill_interface_link_libs ucrtbase)
    set_target_properties(
      quill PROPERTIES INTERFACE_LINK_LIBRARIES
                        "${_quill_interface_link_libs}")
  endif ()
endif ()

# silkpre
set(OPTIONAL_BUILD_TESTS OFF)
set(OLD_CMAKE_POLICY_VERSION_MINIMUM "${CMAKE_POLICY_VERSION_MINIMUM}")
set(CMAKE_POLICY_VERSION_MINIMUM "3.5")
if(WIN32)
  # silkpre and its nested libff dependency both do
  # find_library(GMP_LIBRARY gmp) and classify the result as SHARED if it
  # matches CMAKE_SHARED_LIBRARY_SUFFIX (".dll"). On mingw this call
  # resolves to libgmp.dll.a (a static-format import library for the
  # shared DLL), which still matches ".dll" and gets misclassified.
  # Temporarily restricting the search to ".a" makes find_library() resolve
  # the real static archive instead; since GMP_LIBRARY becomes a cached
  # variable, both subdirectories' find_library(GMP_LIBRARY gmp) calls
  # below short-circuit on this value instead of searching again.
  set(_OLD_CMAKE_FIND_LIBRARY_SUFFIXES "${CMAKE_FIND_LIBRARY_SUFFIXES}")
  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
  find_library(GMP_LIBRARY gmp)
  set(CMAKE_FIND_LIBRARY_SUFFIXES "${_OLD_CMAKE_FIND_LIBRARY_SUFFIXES}")
endif()
add_subdirectory(third_party/silkpre)
set(CMAKE_POLICY_VERSION_MINIMUM "${OLD_CMAKE_POLICY_VERSION_MINIMUM}")
# undo the injection of ccache silkpre/ff does
set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE)
set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK)
# libff (pulled in by silkpre) trips several warnings under our flags: unused
# parameters/constants in stubbed-out code, and an uninitialized timespec in its
# profiling clock helper (only flagged once the optimizer runs).
target_compile_options(
  ff
  PRIVATE -Wno-unused-parameter -Wno-unused-const-variable -Wno-uninitialized)

# tbb
find_package(TBB REQUIRED)

# unordered_dense
add_subdirectory("third_party/unordered_dense")

# ##############################################################################
# unit tests
# ##############################################################################

set(TEST_DATA_DIR "${PROJECT_SOURCE_DIR}/test")
set(VM_DATA_DIR "${PROJECT_SOURCE_DIR}/test/vm/data")
configure_file(cmake/test_resource_data.h.in test/test_resource_data.h @ONLY)

set(TOP_CURRENT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
function(monad_add_test target)
  cmake_parse_arguments(AT "NO_CUSTOM_MAIN" "" "PROPERTIES" ${ARGN})
  if(AT_NO_CUSTOM_MAIN)
    add_executable(${target} ${AT_UNPARSED_ARGUMENTS})
  else()
    add_executable(
      ${target}
      "${CMAKE_CURRENT_FUNCTION_LIST_DIR}/test/unit/common/src/test/main.cpp"
      ${AT_UNPARSED_ARGUMENTS})
    target_include_directories(
      ${target}
      PRIVATE "${CMAKE_CURRENT_FUNCTION_LIST_DIR}/test/unit/common/include")
  endif()
  monad_compile_options(${target})
  target_compile_options(${target} PUBLIC "-Wno-missing-field-initializers"
  )# TODO
  if(WIN32)
    # gtest's GetTypeName() demangles typeid names via __cxa_demangle();
    # mingw's libstdc++ demangler crashes with heap corruption on the very
    # long mangled names produced by typed tests parameterized on
    # structural (class-type) non-type template arguments. Disabling the
    # cxxabi demangling path falls back to raw (mangled) type names in test
    # output, which is cosmetic only.
    target_compile_definitions(${target} PRIVATE GTEST_HAS_CXXABI_H_=0)
  endif()
  target_include_directories(${target} PRIVATE "${TOP_CURRENT_BINARY_DIR}/test")
  target_link_libraries(${target} monad_execution GTest::GTest GTest::Main)
  gtest_discover_tests(
    ${target} DISCOVERY_MODE PRE_TEST
    PROPERTIES ENVIRONMENT ASAN_OPTIONS=abort_on_error=1 ENVIRONMENT
               UBSAN_OPTIONS=halt_on_error=1,print_stacktrace=1 ENVIRONMENT
               TSAN_OPTIONS=external_symbolizer_path=/usr/bin/llvm-symbolizer
               ${AT_PROPERTIES})
endfunction()

function(monad_add_test_folder target)
  cmake_parse_arguments(ATF "" "" "EXCLUDE" ${ARGN})
  file(GLOB_RECURSE test_files CONFIGURE_DEPENDS ${target}/test_*.cpp
       ${target}/*_test.cpp)
  if(ATF_EXCLUDE)
    list(REMOVE_ITEM test_files ${ATF_EXCLUDE})
  endif()
  foreach(test_file ${test_files})
    get_filename_component(test_name ${test_file} NAME_WLE)
    monad_add_test(${test_name} ${test_file})
  endforeach()
endfunction()

function(monad_add_test_death target)
  cmake_parse_arguments(ADD_DEATH_TEST "" "FAIL_REGEX"
                        "SOURCES;LINK_LIBRARIES;TEST_PROPERTIES" ${ARGN})
  if(NOT ADD_DEATH_TEST_FAIL_REGEX)
    message(FATAL_ERROR "FATAL: FAIL_REGEX is mandatory")
  endif()
  add_executable(${target} ${ADD_DEATH_TEST_SOURCES})
  monad_compile_options(${target})
  target_link_libraries(${target} PUBLIC GTest::gtest_main
                                         ${ADD_DEATH_TEST_LINK_LIBRARIES})
  add_test(NAME "${PROJECT_NAME}/${target}" COMMAND ${CMAKE_COMMAND} -E env
                                                    $<TARGET_FILE:${target}>)
  set_tests_properties(
    "${PROJECT_NAME}/${target}"
    PROPERTIES PASS_REGULAR_EXPRESSION
               "${ADD_DEATH_TEST_FAIL_REGEX}"
               ${ADD_DEATH_TEST_TEST_PROPERTIES}
               ENVIRONMENT
               ASAN_OPTIONS=abort_on_error=1
               ENVIRONMENT
               UBSAN_OPTIONS=halt_on_error=1,print_stacktrace=1
               ENVIRONMENT
               TSAN_OPTIONS=external_symbolizer_path=/usr/bin/llvm-symbolizer)
endfunction()

# ##############################################################################
# version
# ##############################################################################

# Embedded in --help output of the C++ binaries. Honors a build-time override
# (e.g. set by CI) so containerized builds without a .git directory can still
# stamp the binary.
if(DEFINED ENV{GIT_COMMIT_HASH})
  set(GIT_COMMIT_HASH $ENV{GIT_COMMIT_HASH})
else()
  execute_process(
    COMMAND git rev-parse HEAD
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_COMMIT_HASH
    OUTPUT_STRIP_TRAILING_WHITESPACE)
endif()

# ##############################################################################
# libs
# ##############################################################################

add_subdirectory("category/async")
add_subdirectory("category/core")
add_subdirectory("category/mpt")
add_subdirectory("category/event")
add_subdirectory("category/execution")
add_subdirectory("category/rpc")
add_subdirectory("category/statesync")
add_subdirectory("category/vm")

# Assemble all the object libraries into complete monad runtime library,
# monad_execution
add_library(monad_execution)
target_link_libraries(
  monad_execution
  PUBLIC monad_core
         monad_async
         monad_trie
         monad_execution_ethereum
         monad_execution_native
         monad_rpc
         monad_statesync
         monad-vm
         monad-vm-compiler
         monad-vm-evm
         monad-vm-interpreter
         monad-vm-runtime
         monad-vm-utils)

# ##############################################################################
# cmds
# ##############################################################################

add_subdirectory(${PROJECT_SOURCE_DIR}/cmd)

# ##############################################################################
# unit tests
# ##############################################################################

add_subdirectory(${PROJECT_SOURCE_DIR}/test/utils)
add_subdirectory(${PROJECT_SOURCE_DIR}/test/ethereum_test)
add_subdirectory(${PROJECT_SOURCE_DIR}/test/unit/common)
add_subdirectory(${PROJECT_SOURCE_DIR}/test/vm)

# ##############################################################################
# utilities
# ##############################################################################

if(UTILS_CLANG_TIDY_AUTO_CONST)
  add_subdirectory(${PROJECT_SOURCE_DIR}/utils)
endif()
