# Copyright (C) 2025 Category Labs, Inc.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

# benchmark calc_min_version
add_executable(calc_min_version_bench "calc_min_version_bench.cpp")
monad_compile_options(calc_min_version_bench)
target_link_libraries(calc_min_version_bench PUBLIC monad_trie monad_async monad_core)

# benchmark async reads
if(NOT WIN32)
  # Uses POSIX alarm()/sigaction(SIGALRM) for its run-time watchdog, which
  # has no equivalent here yet; the async I/O it benchmarks is also not yet
  # implemented on Windows.
  add_executable(async_read_bench "async_read_bench.cpp")
  monad_compile_options(async_read_bench)
  target_link_libraries(
    async_read_bench PUBLIC monad_trie monad_async monad_core
                                    CLI11::CLI11 quill::quill)
endif()
