# Copyright (C) 2025 Category Labs, Inc.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

enable_language(ASM)

add_executable(vm-unit-tests)

target_sources(vm-unit-tests PRIVATE
    async_compile_tests.cpp
    bin_tests.cpp
    compiler_tests.cpp
    evm-as_tests.cpp
    monad_vm_interface_tests.cpp
    monad_vm_memory_pool_tests.cpp
    utils_tests.cpp
    uint256_tests.cpp
    uint128_tests.cpp
    non_temporal_memory_tests.cpp
    rc_ptr_tests.cpp
    transactional_unordered_map_tests.cpp
    stack_tests.cpp
    emitter_tests.cpp
    interpreter_tests.cpp
    lru_weight_cache_tests.cpp
    test_params.cpp
    runtime/fixture.cpp
    runtime/fixture.S
    runtime/transmute_tests.cpp
    runtime/math_tests.cpp
    runtime/memory_tests.cpp
    runtime/keccak_tests.cpp
    runtime/environment_tests.cpp
    runtime/storage_tests.cpp
    runtime/call_tests.cpp
    runtime/data_tests.cpp
    runtime/create_tests.cpp
    main.cpp
)

if(MONAD_COMPILER_TESTING)
    target_sources(vm-unit-tests PRIVATE
        evm_fixture.hpp
        evm_tests.cpp
    )
endif()

if(MONAD_COMPILER_COVERAGE)
    target_compile_options(vm-unit-tests PRIVATE -coverage)
    target_link_options(vm-unit-tests PRIVATE -coverage)
endif()

monad_compile_options(vm-unit-tests)

if(WIN32)
    # GoogleTest's GetTypeName() (used for typed/parameterized test names)
    # demangles RTTI names via __cxa_demangle() from libstdc++-6.dll and
    # frees the result with this binary's own free(). On this mingw-w64
    # toolchain those resolve to different CRT heaps (ucrtbase vs msvcrt),
    # so the free() crashes during static initialization of typed tests.
    # Disabling the cxxabi demangling path avoids the cross-heap free();
    # typed test names just show up mangled instead.
    target_compile_definitions(vm-unit-tests PRIVATE "GTEST_HAS_CXXABI_H_=0")
endif()

target_link_libraries(vm-unit-tests
    PRIVATE monad-vm::monad-vm-test-utils
    PRIVATE monad-vm::monad-vm-fuzzing
    PRIVATE monad-vm::monad-vm-interpreter
    PRIVATE monad-vm::monad-vm-utils
    PRIVATE GTest::gtest
    PRIVATE evmc::mocked_host
    PRIVATE monad_execution
    PRIVATE monad_core
    PRIVATE quill::quill
)

if(MONAD_COMPILER_TESTING)
    target_link_libraries(vm-unit-tests
        PRIVATE evmone
    )
endif()

target_include_directories(vm-unit-tests
    PRIVATE "${TOP_CURRENT_BINARY_DIR}/test"
    PRIVATE "${TEST_DATA_DIR}/unit/common/include"
)
